--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
-            enablemen: true
+            enablement: true
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
